[package]
name = "rpki"
description = "RPKI: Parallel Tensor Watermarking and Pathogen Isolation Protocol [RFC-003]"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "http://rpki.com"
documentation = "https://github.com/Aicent-Stack/manifesto/blob/main/rfcs/RFC-003-RPKI-IMMUNITY.md"
keywords = ["sovereign-ai", "zero-trust", "tensor-watermarking", "rfc-003", "pathogen-isolation"]
categories = ["cryptography", "network-programming", "security", "hardware-acceleration"]
rust-version = "1.85"

[dependencies]
# --- Core Organism Linking ---
# RPKI secures the Neural Spine (RTTP) at the hardware gate
rttp.workspace = true

# --- Parallel Immune Pipeline ---
# SIMD-level acceleration for sub-300µs pathogen detection
rayon.workspace = true
crossbeam.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true   # [PERF] High-concurrency immune triage

# --- Cryptographic DNA (Zero-Trust Provenance) ---
# High-performance hashing and steganography for ROA-Chain attestation
sha2.workspace = true          # Merkle-DAG chain integrity
ring.workspace = true          # Hardware-native cryptographic primitives
zeroize = { workspace = true, features = ["derive"] } # [SECURITY] Secure credential clearing

# --- Diagnostics & Logic ---
serde = { workspace = true, features = ["derive"] }
anyhow.workspace = true
tracing.workspace = true       # High-fidelity telemetry for pathogen alerts
once_cell.workspace = true

[features]
default = ["std"]
std = ["serde/std", "anyhow/std", "rttp/std"]
# [RFC-003] SIMD acceleration for AVX-512 tensor watermarking
simd-acceleration = []

[dev-dependencies]
# Benchmarking for 300µs quarantine latency targets
criterion = "0.5"
