[package]
name = "zcmk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rttp.workspace = true
aicent.workspace = true
crossbeam-queue.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
serde.workspace = true
anyhow.workspace = true
tokio.workspace = true
rand.workspace = true
tracing.workspace = true
num-traits = "0.2"
