[package]
name = "zcmk"
description = "ZCMK: Real-Time Bid/Ask (RTBA) and Zero-Commission Settlement Protocol [RFC-004]"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "http://zcmk.com"
documentation = "https://github.com/Aicent-Stack/manifesto/blob/main/rfcs/RFC-004-ZCMK-BLOOD.md"
keywords = ["hft", "micro-settlement", "rfc-004", "rtba", "picotoken"]
categories = ["financial-services", "algorithms", "distributed-computing"]
rust-version = "1.75"

[dependencies]
# --- Core Organism Linking ---
# ZCMK is the blood of the organism, circulating value through the neural pulse (RTTP)
rttp.workspace = true
aicent.workspace = true

# --- HFT-Grade Matching Engine ---
# [PERF] High-concurrency lock-free queues for nanosecond-speed auctioning
crossbeam-queue.workspace = true
parking_lot.workspace = true   # [PERF] HFT-grade synchronization primitives
num-traits = "0.2"             # [FINANCE] Precision math for picotoken (10^-12) arithmetic
once_cell.workspace = true     # Safe static initialization of the market manifold

# --- Logic & Telemetry ---
serde = { workspace = true, features = ["derive"] }
anyhow.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
rand.workspace = true          # Chaos-testing the market pressure
tracing.workspace = true       # Financial telemetry for audit trails

[features]
default = ["std"]
std = ["serde/std", "anyhow/std"]
# [RFC-006] Enable Hive-level credit shunting across the global operational grid
hive-metabolism = []

[dev-dependencies]
# Benchmarking finality latency (<1ms targets)
criterion = "0.5"
