[package]
name = "zcmk"
description = "ZCMK: Real-Time Bid/Ask (RTBA) and Zero-Commission Settlement Protocol [RFC-004]"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "http://zcmk.com"
documentation = "https://github.com/Aicent-Stack/manifesto/blob/main/rfcs/RFC-004-ZCMK-BLOOD.md"
keywords = ["hft", "micro-settlement", "rfc-004", "compute-market", "economic-homeostasis"]
categories = ["financial-services", "algorithms", "distributed-computing"]
rust-version = "1.75"

[dependencies]
# --- Core Organism Linking ---
# ZCMK is the blood of the organism; it clears value atomically with RTTP pulses.
rttp.workspace = true
aicent.workspace = true

# --- HFT-Grade Matching Engine ---
# [PERF] High-frequency lock-free data structures for nanosecond auctions.
crossbeam-queue.workspace = true
parking_lot.workspace = true   # HFT-grade synchronization primitives
num-traits = { version = "0.2", default-features = false } # High-precision arithmetic

# --- Logic & Telemetry ---
serde = { workspace = true, features = ["derive"] }
anyhow.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
rand.workspace = true          # Stochastic entropy for market pressure simulation
tracing.workspace = true       # Financial telemetry for audit trails
once_cell.workspace = true

[features]
default = ["std"]
std = ["serde/std", "anyhow/std", "rttp/std"]
# [RFC-006] Enable metabolic shunting across the global operational grid
hive-metabolism = []

[dev-dependencies]
# Benchmarking finality latency (<1ms targets)
criterion = "0.5"
